syntax = "proto3";

package taskpb;

option go_package = "game/generated/pb/game";

message DBTask {
  uint64 key = 1;
  string where_case = 2;
  string op = 3;          // "read" / "write"
  string msg_type = 4;    // 用于标识 Protobuf 类型
  bytes body = 5;         // 原始序列化数据
  string task_id = 6; // 👈 用于写回 Redis 的唯一 key
}

message TaskResult {
  bool success = 1;       // 是否成功
  bytes data = 2;         // 返回的 proto message bytes（如果 success = true）
  string error = 3;       // 错误信息（如果 success = false）
}